generated-tests/tests/snapshots/ts/generated_tests__typescript__test_generated_interface_declaration.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
interface TestInterface { prop: number; method2(): void; }

AST:
(program
  (interface_declaration
    (type_identifier)
    (interface_body
      (property_signature
        (property_identifier)
        (type_annotation
          (predefined_type)
        )
      )
      (method_signature
        (property_identifier)
        (formal_parameters)
        (type_annotation
          (predefined_type)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "TestInterface",
            line_number: 1,
            definition_type: InterfaceDefinition,
            scope: Some(
                "TestInterface",
            ),
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
