generated-tests/tests/snapshots/ts/generated_tests__typescript__test_generated_number1.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
42

AST:
(program
  (expression_statement
    (number)
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
